<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundTexture"
    >

    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_icon"
        android:padding="15dp"
        android:contentDescription="@string/home_button"
        android:layout_margin="10dp"
        android:foreground="@drawable/ripple_highlight"
        android:background="@drawable/rounded_corners_button"
        />

    <TextView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:fontFamily="@font/khand"
        android:lineHeight="50dp"
        android:maxWidth="180dp"
        android:shadowColor="?attr/colorAzulPiscina"
        android:shadowDy="7.5"
        android:shadowRadius="5"
        android:text="@string/history"
        android:textAlignment="center"
        android:textColor="?attr/colorTextContrast"
        android:textFontWeight="700"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_matches_warning"
        android:textSize="24sp"
        android:padding="25dp"
        android:maxWidth="300dp"
        android:fontFamily="@font/khand"
        android:textColor="?attr/colorTextContrast"
        android:shadowRadius="15"
        android:shadowColor="?attr/colorOnSurface"
        android:textFontWeight="600"
        android:textAlignment="center"
        android:layout_marginVertical="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history" />

</androidx.constraintlayout.widget.ConstraintLayout>