<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="?attr/backgroundTexture"
    >

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/history"
        app:srcCompat="@drawable/volleyball" />

    <TextView
        android:id="@+id/app_name"
        android:maxWidth="180dp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caps_app_name"
        android:textSize="48sp"
        android:lineHeight="50dp"
        android:fontFamily="@font/khand"
        android:textFontWeight="700"
        android:textColor="?attr/colorOnSurface"
        android:shadowColor="?attr/colorErrorContainer"
        android:shadowRadius="5"
        android:shadowDy="6"
        android:shadowDx="6"
        android:layout_marginVertical="50dp"
        app:layout_constraintTop_toBottomOf="@id/app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/start"/>

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:textSize="28sp"
        android:fontFamily="@font/khand"
        android:textFontWeight="600"
        android:layout_marginVertical="15dp"
        app:layout_constraintBottom_toTopOf="@+id/history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <Button
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_button"
        android:textSize="28sp"
        android:fontFamily="@font/khand"
        android:textFontWeight="600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_icon"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>